# indata2json

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  json2indata
.github/workflows/: release.yml  test_build_macos.yml
demo_inputs/: input.HELIOTRON  input.W7X_s2048_M16_N16_f12_cpu8  input.vmec  input.w7x_ref_167_12_12
src/: indata2json.f90  nonzerolen.f90  vmec_input.f
